validation-flow/validation-flow-output/validation-flow-8001-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "371"
  name: validation-flow-8001-route
  namespace: sce-test
spec:
  to:
    kind: Service
    name: validation-flow-service
    weight: 100
  port:
    targetPort: validation-flow-8001
